refactor to RESTfull & HATEOAS add ResControllers refactor Repositories, Services refactor Entity User add handling Exceptions add test UserRestController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@
 # WEB PROPERTIES
 #server.address= # Network address to which the server should bind.
 server.port=8189
-server.servlet.context-path=/app
+#server.servlet.context-path=/app
+#
 # DATA PROPERTIES
 # DataSource ( DataSourceAutoConfiguration & DataSourceProperties )
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -17,6 +18,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.default_schema=pocket
 #spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#
 # FLYWAY (FlywayProperties)
 #spring.flyway.baseline-description=pocket
 spring.flyway.clean-disabled=true
@@ -27,6 +29,7 @@ spring.flyway.user=postgres
 spring.flyway.password=postgres
 spring.flyway.validate-on-migrate=true
 spring.flyway.url=jdbc:postgresql://localhost:5432/geek_db
+#
 # DATA REDIS
 #spring.data.redis.repository.enabled = True
 # DATA REST ( RepositoryRestProperties )
@@ -34,6 +37,7 @@ spring.flyway.url=jdbc:postgresql://localhost:5432/geek_db
 #spring.redis.url=
 #spring.redis.host=
 spring.redis.port=6379
+#
 # LOGGING
 #logging.file=/logs2/pocket.log
 #logging.file.max-size=100000
@@ -43,7 +47,9 @@ spring.redis.port=6379
 #logging.level.org.springframework=WARN
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.springframework.security=DEBUG
+#
 # ACTUATOR PROPERTIES
 management.endpoints.web.exposure.include=*
+#
 # OTHER
 spring.jackson.serialization.indent_output=true
