--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,12 @@
 server.port=8189
 #server.servlet.context-path=/app
 #
+# Настройка сервера на запуск с SSL/TLS и использования HTTPS
+#http://spring-projects.ru/guides/tutorials-bookmarks/
+server.ssl.key-store=classpath:tomcat.keystore
+server.ssl.key-store-password=pocket
+server.ssl.key-password=pocket
+#
 # DATA PROPERTIES
 # DataSource ( DataSourceAutoConfiguration & DataSourceProperties )
 spring.datasource.driver-class-name=org.postgresql.Driver
