--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-//https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
+#https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 #debug=false # Enable debug logs.
 #trace=false # Enable trace logs.
 # WEB PROPERTIES
@@ -8,33 +8,24 @@ server.port=8189
 #
 # Настройка сервера на запуск с SSL/TLS и использования HTTPS
 #http://spring-projects.ru/guides/tutorials-bookmarks/
-server.ssl.key-store=classpath:tomcat.keystore
-server.ssl.key-store-password=pocket
-server.ssl.key-password=pocket
+#server.ssl.key-store=classpath:tomcat.keystore
+#server.ssl.key-store-password=pocket
+#server.ssl.key-password=pocket
 #
 # DATA PROPERTIES
-# DataSource ( DataSourceAutoConfiguration & DataSourceProperties )
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/geek_db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.default_schema=pocket
-#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#
-# FLYWAY (FlywayProperties)
-#spring.flyway.baseline-description=pocket
-spring.flyway.clean-disabled=true
-spring.flyway.connect-retries=3
-spring.flyway.encoding=UTF-8
-spring.flyway.schemas=pocket
-spring.flyway.user=postgres
-spring.flyway.password=postgres
-spring.flyway.validate-on-migrate=true
-spring.flyway.url=jdbc:postgresql://localhost:5432/geek_db
+#mongodb
+# Authentication database name.
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.database=pocketdb
+#spring.data.mongodb.field-naming-strategy= # Fully qualified name of the FieldNamingStrategy to use.
+#spring.data.mongodb.grid-fs-database= # GridFS database name.
+spring.data.mongodb.host=localhost
+spring.data.mongodb.password=pocket
+spring.data.mongodb.port=27017
+spring.data.mongodb.repositories.enabled=true
+#spring.data.mongodb.uri=mongodb://localhost:27017/pocketdb?ssl=false # Mongo database URI. When set, host and port are ignored.
+spring.data.mongodb.username=pocket
+
 #
 # DATA REDIS
 #spring.data.redis.repository.enabled = True
@@ -53,6 +44,7 @@ spring.redis.port=6379
 #logging.level.org.springframework=WARN
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.springframework.security=DEBUG
+#log4j.category.org.springframework.data.document.mongodb=DEBUG
 #
 # ACTUATOR PROPERTIES
 management.endpoints.web.exposure.include=*
