--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,16 +15,17 @@ server.port=8189
 # DATA PROPERTIES
 #mongodb
 # Authentication database name.
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.database=pocketdb
+#spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.database=pocketdb
 #spring.data.mongodb.field-naming-strategy= # Fully qualified name of the FieldNamingStrategy to use.
 #spring.data.mongodb.grid-fs-database= # GridFS database name.
-spring.data.mongodb.host=localhost
-spring.data.mongodb.password=pocket
-spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.password=pocket
+#spring.data.mongodb.port=27017
 spring.data.mongodb.repositories.enabled=true
-#spring.data.mongodb.uri=mongodb://localhost:27017/pocketdb?ssl=false # Mongo database URI. When set, host and port are ignored.
-spring.data.mongodb.username=pocket
+# Mongo database URI. When set, host and port are ignored.
+spring.data.mongodb.uri=mongodb://localhost:27017/pocketdb?ssl=false 
+#spring.data.mongodb.username=pocket
 
 #
 # DATA REDIS
