completed the AuthRestController, UserRestController Auth web & rest is working!!! add to pub UserChat, UserChatCollerction refactor UserPub, UserProfilePub к названиям контроллеров которые используются в качестве примера и для тестирования добавил Example

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ spring.data.mongodb.uri=mongodb://localhost:27017/pocketdb?ssl=false
 #spring.data.rest.base-path =
 #spring.redis.url=
 #spring.redis.host=
-spring.redis.port=6379
+#spring.redis.port=6379
 #
 # LOGGING
 #logging.file=/logs2/pocket.log
@@ -48,7 +48,7 @@ spring.redis.port=6379
 #log4j.category.org.springframework.data.document.mongodb=DEBUG
 #
 # ACTUATOR PROPERTIES
-management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=*
 #
 # OTHER
 spring.jackson.serialization.indent_output=true
