--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,20 @@
 #trace=false # Enable trace logs.
 # WEB PROPERTIES
 #server.address= # Network address to which the server should bind.
-server.port=8189
+server.port=8888
+server.port.http=80
 #server.servlet.context-path=/app
 #
 # Настройка сервера на запуск с SSL/TLS и использования HTTPS
 #http://spring-projects.ru/guides/tutorials-bookmarks/
-#server.ssl.key-store=classpath:tomcat.keystore
-#server.ssl.key-store-password=pocket
-#server.ssl.key-password=pocket
+security.require-ssl=true
+server.ssl.key-alias=tomcat
+#server.ssl.key-store-type:JKS
+#server.ssl.key-store-type:PKCS12
+server.ssl.key-store=classpath:keystore.jks
+server.ssl.key-store-password=pocket
+server.ssl.key-password=pocket
+
 #
 # DATA PROPERTIES
 #mongodb
