--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,17 @@ spring.data.mongodb.repositories.enabled=true
 # Mongo database URI. When set, host and port are ignored.
 spring.data.mongodb.uri=mongodb://localhost:27017/pocketdb?ssl=false 
 #spring.data.mongodb.username=pocket
+################### JavaMail Configuration ##########################
+support.email=USERNAME@gmail.com
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.protocol=smtps
+spring.mail.username=USERNAME@gmail.com
+spring.mail.password=PASSWORD
+spring.mail.properties.mail.transport.protocol=smtps
+spring.mail.properties.mail.smtps.auth=true
+spring.mail.properties.mail.smtps.starttls.enable=true
+spring.mail.properties.mail.smtps.timeout=8000
 
 #
 # DATA REDIS
@@ -58,3 +69,6 @@ spring.data.mongodb.uri=mongodb://localhost:27017/pocketdb?ssl=false
 #
 # OTHER
 spring.jackson.serialization.indent_output=true
+spring.thymeleaf.cache=false
+#    5am every day
+#purge.cron.expression=0 0 5 * * ?
