Auth JWT token to /v1/account is working

--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,13 @@
             <version>${uap-java.version}</version>
         </dependency>
 
+        <!-- Token & JWT -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
+
 
         <!-- Logger -->
         <!--<dependency>-->
