--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #server.address= # Network address to which the server should bind.
 server.port=8888
 server.port.http=80
-#server.servlet.context-path=/app
+server.servlet.context-path=/v1
 #
 # Настройка сервера на запуск с SSL/TLS и использования HTTPS
 #http://spring-projects.ru/guides/tutorials-bookmarks/
