--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,11 @@
             <version>1.18.4</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
