change logger to Log4j2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ server.ssl.key-password=pocket
 #spring.data.mongodb.port=27017
 spring.data.mongodb.repositories.enabled=true
 # Mongo database URI. When set, host and port are ignored.
-spring.data.mongodb.uri=mongodb://localhost:27017/pocketdb?ssl=false 
+spring.data.mongodb.uri=mongodb://localhost:27017/pocketdb
 #spring.data.mongodb.username=pocket
 
 #
@@ -54,23 +54,43 @@ spring.mail.properties.mail.smtps.timeout=8000
 #spring.redis.url=
 #spring.redis.host=
 #spring.redis.port=6379
+
 #
 # LOGGING
-#logging.file=/logs2/pocket.log
+#вариант 1 - текущий
+#logstash.host=localhost
+#logstash.port=10000
+#logger.console.tresholdFilter=ALL
+#logger.socket.tresholdFilter=OFF
+#
+#вариант 2
+#logging.config=src/main/resources/log4j2.properties
+#
+#вариант 3 - slf4j
+#logging.file=pocket.log
+#logging.path=/logs
 #logging.file.max-size=100000
-##=FATAL =ERROR =WARN =INFO =DEBUG =TRACE
+#logging.file.max-history=10
+## паттерн логов для консоли
+#logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+## паттерн логов для записи в файл
+#logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+###=FATAL =ERROR =WARN =INFO =DEBUG =TRACE
 #logging.level.root=INFO
-#logging.level.org.hibernate=DEBUG
+#logging.level.ru.geekbrains.pocket.backend=DEBUG
 #logging.level.org.springframework=WARN
-#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.springframework.web=DEBUG
 #logging.level.org.springframework.security=DEBUG
-#log4j.category.org.springframework.data.document.mongodb=DEBUG
+#logging.level.org.springframework.data.document.mongodb=DEBUG
+#logging.level.org.hibernate=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.group.tomcat=org.apache.catalina, org.apache.coyote, org.apache.tomcat
+
 #
 # ACTUATOR PROPERTIES
 #management.endpoints.web.exposure.include=*
 #
 # OTHER
 spring.jackson.serialization.indent_output=true
-spring.thymeleaf.cache=false
 #    5am every day
 #purge.cron.expression=0 0 5 * * ?
