--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,6 @@
         </dependency>
 
         <!-- maxmind dependency -->
-
         <dependency>
             <groupId>com.maxmind.geoip2</groupId>
             <artifactId>geoip2</artifactId>
@@ -145,7 +144,6 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.0</version>
         </dependency>
-
 
         <!-- Logger -->
         <!-- log4j2 -->
@@ -169,13 +167,19 @@
 <!--        <version>1.7.25</version>-->
 <!--        </dependency>-->
 
-
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.4</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- JSON -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
         </dependency>
 
         <dependency>
