turn of redirect http don't working auth token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 # WEB PROPERTIES
 #server.address= # Network address to which the server should bind.
 server.port=8888
-#server.port.http=80
+server.port.http=80
 server.servlet.context-path=/v1
 #
 # Настройка сервера на запуск с SSL/TLS и использования HTTPS
