auth token is working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -92,5 +92,6 @@ spring.mail.properties.mail.smtps.timeout=8000
 #
 # OTHER
 spring.jackson.serialization.indent_output=true
+spring.thymeleaf.cache=false
 #    5am every day
 #purge.cron.expression=0 0 5 * * ?
