--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,17 +27,17 @@ server.ssl.key-password=pocket
 #
 # DATA PROPERTIES
 #mongodb
-# Authentication database name.
 #spring.data.mongodb.authentication-database=admin
 #spring.data.mongodb.database=pocketdb
 #spring.data.mongodb.field-naming-strategy= # Fully qualified name of the FieldNamingStrategy to use.
 #spring.data.mongodb.grid-fs-database= # GridFS database name.
-#spring.data.mongodb.host=localhost
+#spring.data.mongodb.host=cluster0-vsjrv.mongodb.net
 #spring.data.mongodb.password=pocket
 #spring.data.mongodb.port=27017
-spring.data.mongodb.repositories.enabled=true
+#spring.data.mongodb.repositories.enabled=true
 # Mongo database URI. When set, host and port are ignored.
-spring.data.mongodb.uri=mongodb://localhost:27017/pocketdb
+#spring.data.mongodb.uri=mongodb://localhost:27017/pocketdb
+spring.data.mongodb.uri=mongodb+srv://pocket:pocket@cluster0-vsjrv.mongodb.net/pocketdb?retryWrites=true
 #spring.data.mongodb.username=pocket
 
 #
