--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>ru.geekbrains</groupId>
     <artifactId>pocket.backend</artifactId>
     <version>0.0.2-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
     <name>PocketJavaBackend</name>
     <description>Pocket Java Backend Application</description>
 
@@ -319,7 +319,7 @@
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                         </manifest>
                         <manifestEntries>
-                            <Implementation-Build>$\{buildNumber}</Implementation-Build>
+                            <Implementation-Build>${buildNumber}</Implementation-Build>
                         </manifestEntries>
                     </archive>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
@@ -328,31 +328,31 @@
             <!--плагин для удаления ненужных артефактов после завершения сборки-->
             <!--Например, если приложение упаковано в файл WAR, и вы хотите удалить все файлы JAR-->
             <!--(потому что они дублируются внутри файла WAR) в результате остаётся только WAR файл-->
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-clean-plugin</artifactId>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>clean-jar-artifacts</id>-->
-<!--                        <phase>install</phase>-->
-<!--                        <goals><goal>clean</goal></goals>-->
-<!--                        <configuration>-->
-<!--                            <excludeDefaultDirectories>true</excludeDefaultDirectories>-->
-<!--                            <filesets>-->
-<!--                                <fileset>-->
-<!--                                    <directory>target/dependency/*.jar</directory>-->
-<!--                                </fileset>-->
-<!--                                <fileset>-->
-<!--                                    <directory>target</directory>-->
-<!--                                    <excludes>-->
-<!--                                        <exclude>*.war</exclude>-->
-<!--                                    </excludes>-->
-<!--                                </fileset>-->
-<!--                            </filesets>-->
-<!--                        </configuration>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>clean-jar-artifacts</id>
+                        <phase>install</phase>
+                        <goals><goal>clean</goal></goals>
+                        <configuration>
+                            <excludeDefaultDirectories>true</excludeDefaultDirectories>
+                            <filesets>
+                                <fileset>
+                                    <directory>target/dependency/*.jar</directory>
+                                </fileset>
+                                <fileset>
+                                    <directory>target</directory>
+                                    <excludes>
+                                        <exclude>*.war</exclude>
+                                    </excludes>
+                                </fileset>
+                            </filesets>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <!--плагин для генерации номера сборки-->
 <!--            http://www.mojohaus.org/buildnumber-maven-plugin/usage.html-->
             <plugin>
@@ -406,12 +406,12 @@
         </plugins>
     </build>
 
-    <repositories>
-        <repository>
-            <id>spring-milestones</id>
-            <name>Spring Milestones</name>
-            <url>https://repo.spring.io/milestone</url>
-        </repository>
-    </repositories>
+<!--    <repositories>-->
+<!--        <repository>-->
+<!--            <id>spring-milestones</id>-->
+<!--            <name>Spring Milestones</name>-->
+<!--            <url>https://repo.spring.io/milestone</url>-->
+<!--        </repository>-->
+<!--    </repositories>-->
 
 </project>
